--- a/templates/home.html
+++ b/templates/home.html
@@ -6,41 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jovian Careers</title>
     <style>
-        h1 {
-            font-size: 50px;
-            font-family: Roboto;
-            font-weight: normal;
-            text-align: center
-        }
-
         #banner {
             width: 100%;
             height: 360px;
             object-fit: cover;
         }
 
-        h2 {
-            font-family: Roboto;
-            font-size: 32px;
-            text-align: center;
-            font-weight: normal;
-        }
-
-        
-        #container{
-            max-width: 720px;
-            margin: 0 auto 0 auto;
-        }
     </style>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     
 </head>
 
 <body>
-    <div id="container">
+    <div class ="container">
 
-        <h1>Jovian Careers</h1>
-        <img id="banner" src="http://127.0.0.1:5500/static/banner.jpeg">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing
+        <h1 class="text-center mt-2 mb-4">Jovian Careers</h1>
+        <img class="img-fluid" id="banner" src="http://127.0.0.1:5500/static/banner.jpeg">
+
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing
             elit. Aspernatur quae harum inventore corporis animi
             perspiciatis aliquam neque optio quam. Quae incidunt ipsum totam ad nisi architecto excepturi maxime labore
             possimus!
@@ -56,11 +40,11 @@
             Adipisci dolorem assumenda, nemo aperiam earum iste aspernatur, animi illum ab alias quibusdam? Vitae quae
             in iste quos asperiores cumque, sint impedit unde sit quisquam, vero officia nisi recusandae reprehenderit.
         </p>
-        <h2>Open Positions</h2>
+        <h2 class="text-center mt-2 mb-4">Open Positions</h2>
         <p>TODO - Show the jobs here</p>
-        <div style="text-align: center;">
-            <button>Contact Us</button>
-            <p>Copyright 2025, Jovian</p>
+        <div class="text-center">
+            <button class="btn btn-primary btn-lg">Contact Us</button>
+            <p class="mt-4">Copyright 2025, Jovian</p>
         </div>
 
     </div>
