made some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
             Adipisci dolorem assumenda, nemo aperiam earum iste aspernatur, animi illum ab alias quibusdam? Vitae quae
             in iste quos asperiores cumque, sint impedit unde sit quisquam, vero officia nisi recusandae reprehenderit.
         </p>
-        <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+        <h2 class="text-center mt-2 mb-4">Job Openings</h2>
         <p>
             <!-- using for loop in template -->
             {% for job in jobs %} 
