application form created

--- a/templates/jobPage.html
+++ b/templates/jobPage.html
@@ -6,6 +6,7 @@
     <title>{{job.title}} - Jovian Careers</title>
 </head>
 <body>
+    {% include 'nav.html' %}
     <h3>Title</h3>
     <p>{{job.title}}</p>
     <h3>Location</h3>
@@ -13,8 +14,20 @@
     <h3>Salary</h3>
     <p>{{job.currency}}{{job.salary}}</p>
     <h3>Job Responsibilities</h3>
-    <p>{{job.responsibilities}}</p>
+    <ul>
+        {% for line in job.responsibilities.split("\n") %}
+        <li>{{line}}</li>
+        {% endfor %}
+    </ul>
     <h3>Requirements</h3>
-    <p>{{job.requirements}}</p>
+    <ol>
+        {% for line in job.requirements.split(".") %}
+            {% if line.strip() %}
+                <li>{{ line.strip() }}</li>
+            {% endif %}
+        {% endfor %}
+    </ol>
+    {% include 'application_form.html' %}
+    {% include 'footer.html' %}
 </body>
 </html>
