--- a/templates/jobItem.html
+++ b/templates/jobItem.html
@@ -25,9 +25,9 @@
             </div>
         </div>
         <div class="ms-3">
-            <button type="button" class="btn btn-primary btn-sm">
+            <a href="/job/{{job['id']}}" type="button" class="btn btn-primary btn-sm">
                 <i class="fas fa-paper-plane me-1"></i>Apply
-            </button>
+            </a>
         </div>
     </div>
 </div>
