--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -2,15 +2,15 @@
 <form action="/job/{{job['id']}}/apply" method="post">
     <div>
         <label>Full Name</label>
-        <input type="text" name="full_name" placeholder="Bruce Wayne" required>
+        <input type="text" required name="full_name" placeholder="Bruce Wayne" required>
     </div>
     <div>
         <label>Email</label>
-        <input type="email" name="email" placeholder="bruce@wayne.com" required>
+        <input type="email" required name="email" placeholder="bruce@wayne.com" required>
     </div>
     <div>
         <label>LinkedIn URL</label>
-        <input type="text" name="linkedin_url" placeholder="https://linkedin.com/in/brucewayne">
+        <input type="url" name="linkedin_url" placeholder="https://linkedin.com/in/brucewayne">
     </div>
     <div>
         <label>Education</label>
@@ -22,7 +22,7 @@
     </div>
     <div>
         <label>Resume URL</label>
-        <input type="text" name="resume_url">
+        <input type="url" name="resume_url">
     </div>
-    <input type="submit" value="Submit Application">
+    <input type="submit">
 </form>
